Updated caption overlapping photo bug.

--- a/source/css/objects/_blocks.scss
+++ b/source/css/objects/_blocks.scss
@@ -160,7 +160,6 @@ a.b-inner:hover {
     position: relative;
     .credit {
       position: absolute;
-      bottom: rem(-14);
       right: 0;
     }
   }
